--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,23 @@ li a:hover:not(.active) {
 #HomeButton{
   background-color: rgb(26, 133, 221);
 }
+
+.SignUp, .SignIn, button {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  margin-right: 25%;
+  margin-left: 25%;
+  padding: 5%;
+  padding: 20px;
+  
+}
+
+input, label{
+  width: 90%;
+  padding: 12px 20px;
+  margin: 11px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
