Some general styling options, to be improved later.

--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,27 @@ li a:hover:not(.active) {
   background-color: #04AA6D;
   border-radius: 5%;
 }
+
+#doctorAvatar{
+  vertical-align: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: #ffffff;
+}
+
+#searchForm{
+  text-align: left;
+  background-color: #04AA6D;
+  margin-left: 25%;
+  margin-right: 25%;
+  border-style: dashed;
+  padding: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-left: 0.25rem;
+  margin-right: 1.5rem;
+  font: 1.25rem sans-serif;
+  justify-content: left;
+}
