--- a/src/main.css
+++ b/src/main.css
@@ -1,40 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
 :root {
-    --form-width: 530px;
-    --form-height: 660px;
-    /* Typography */
-    --h1: 64px;
-    --subtitle-1: 24px;
-    --input-placeholder: 20px;
-    /* Colors */
-    --primary: #224957;
-    --secondary: #20DF7F;
-    --btn-background-1: #0EBE7F;
-    /* Sizes */
-    --btn-width-1: 480px;
-    --btn-width-2: 230px;
+  --form-width: 530px;
+  --form-height: 660px;
+  /* Typography */
+  --h1: 64px;
+  --subtitle-1: 24px;
+  --input-placeholder: 20px;
+  --text-small: 14px;
+  /* Colors */
+  --primary: #224957;
+  --secondary: #20df7f;
+  --btn-background-1: #0ebe7f;
+  /* Sizes */
+  --btn-width-1: 480px;
+  --btn-width-2: 230px;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .form__container {
-    width: var(--form-width);
-    height: var(--form-height);
-    position: absolute;
-    top: calc(50% - var(--form-height) / 2);
-    left: calc(50% - var(--form-width) / 2);
-    /* top: 50%;
+  width: var(--form-width);
+  height: var(--form-height);
+  position: absolute;
+  top: calc(50% - var(--form-height) / 2);
+  left: calc(50% - var(--form-width) / 2);
+  /* top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.auth__heading {
+  font-size: var(--h1);
+  margin-bottom: 22px;
+}
+.auth__subheading {
+  font-size: var(--subtitle-1);
+  margin-bottom: 22px;
+}
+.auth__heading,
+.auth__subheading {
+  color: var(--primary);
+  font-weight: 500;
+}
+.auth__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
