--- a/src/main.css
+++ b/src/main.css
@@ -16,8 +16,8 @@
   --btn-width-2: 230px;
   /* Navigation Drawer */
   --drawer-width: 20%;
-  --drawer-collapsed-width: 3%;
-  --drawer-padding: 6px;
+  --drawer-collapsed-width: 50px;
+  --drawer-padding: 1px;
   --nav-link-spacing: 20px;
 }
 * {
