--- a/src/main.css
+++ b/src/main.css
@@ -31,6 +31,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
+.error {
+  color: rgb(228, 13, 13);
+}
 .active {
   background-color: var(--primary);
   border-radius: 5px;
