--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -1,5 +1,14 @@
+/*@import url('https://fonts.cdnfonts.com/css/lato');*/
+/*@import url('https://fonts.cdnfonts.com/css/shadeon');*/
+/*@import url('https://fonts.cdnfonts.com/css/segoe-ui-4');*/
+/*@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");*/
+
 .App {
   text-align: center;
+  /*font-family: 'Lato', sans-serif;*/
+  /*font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;*/
+  /*font-family: "Segoe UI", sans-serif;*/
+  /*font-family: "Shadeon", sans-serif;*/
 }
 
 .App-logo {
@@ -38,7 +47,7 @@
 }
 .Sidebar {
   display: flex;
-  width: 20%;
+  /*width: 20%;*/
 }
 .Items {
   display: flex;
