--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,3 +1,5 @@
+@import "./footer.scss";
+
 $primary-color: #224957;
 $green-button: #20df7f;
 $input-x-padding: 20px;
@@ -88,9 +90,9 @@ li a {
 
 .SignUp, .SignIn {
   border-radius: 5px;
-  background-color: #f2f2f2;
-  margin-right: 25%;
-  margin-left: 25%;
+  //background-color: #f2f2f2;
+  //margin-right: 25%;
+  //margin-left: 25%;
   padding: 5%;
   /*padding: 20px;*/
 
